--- a/alc/index.html
+++ b/alc/index.html
@@ -5,12 +5,12 @@
         <title>Amigo Prevención del delito</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<link rel="stylesheet" href="../css/font-awesome.min.css" />
-		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+		<link rel="stylesheet" href="../css/jquery.mobile-1.4.5.min.css" />
         <link rel="stylesheet" href="../css/jquerymobile.nativedroid.css" />
         <link rel="stylesheet" href="../css/jquerymobile.nativedroid.dark.css"  id='jQMnDTheme' />
         <link rel="stylesheet" href="../css/jquerymobile.nativedroid.color.green.css" id='jQMnDColor' />
-		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-        <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+		<script src="../js/jquery-1.9.1.min.js"></script>
+        <script src="../js/jquery.mobile-1.4.5.min.js"></script>
     </head>
     <body>
     <div data-role="page" data-theme='a'>
@@ -28,7 +28,7 @@
             <h4>Brigada de vigilanca animal</h4>
             <ul data-role="listview">
 	            <li data-icon='false'><a href="../brigada/ques.html"><i class='lIcon fa fa-angle-right'></i>¿Qué es?</a></li>
-	            <li data-icon='false'><a href="../brigada/denuncia.php"><i class='lIcon fa fa-angle-right'></i>Denuncia</a></li>
+	            <li data-icon='false'><a href="../brigada/denuncia.html"><i class='lIcon fa fa-angle-right'></i>Denuncia</a></li>
             </ul>
         </div>
 	<div data-role="collapsible" data-content-theme="b">
@@ -36,13 +36,13 @@
             <ul data-role="listview">
 	            <li data-icon='false'><a href="#"><i class='lIcon fa fa-angle-right'></i>¿Qué es?</a></li>
 	            <li data-icon='false'><a href="../grafiti/donde.html"><i class='lIcon fa fa-angle-right'></i>¿Donde puedo verlos?</a></li>
-	            <li data-icon='false'><a href="../grafiti/ins.php"><i class='lIcon fa fa-angle-right'></i>Inscribete</a></li>
-	            <li data-icon='false'><a href="../grafiti/denuncia.php"><i class='lIcon fa fa-angle-right'></i>Denuncia</a></li>
+	            <li data-icon='false'><a href="../grafiti/ins.html"><i class='lIcon fa fa-angle-right'></i>Inscribete</a></li>
+	            <li data-icon='false'><a href="../grafiti/denuncia.html"><i class='lIcon fa fa-angle-right'></i>Denuncia</a></li>
             </ul>
         </div>
         <ul data-role="listview">
             <li data-icon='false'><a href="#"><i class='lIcon fa fa-bullhorn'></i>Conduce sin alcohol</a></li>
-            <li data-icon='false'><a href="../sol/"><i class='lIcon fa fa-bullhorn'></i>Solicitud de platicas</a></li>
+            <li data-icon='false'><a href="../sol/index.html"><i class='lIcon fa fa-bullhorn'></i>Solicitud de platicas</a></li>
         </ul>
     </div>
 
