--- a/brigada/ques.html
+++ b/brigada/ques.html
@@ -5,12 +5,12 @@
         <title>Amigo Prevención del delito</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<link rel="stylesheet" href="../css/font-awesome.min.css" />
-		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+		<link rel="stylesheet" href="../css/jquery.mobile-1.4.5.min.css" />
         <link rel="stylesheet" href="../css/jquerymobile.nativedroid.css" />
         <link rel="stylesheet" href="../css/jquerymobile.nativedroid.dark.css"  id='jQMnDTheme' />
         <link rel="stylesheet" href="../css/jquerymobile.nativedroid.color.green.css" id='jQMnDColor' />
-		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-        <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+		<script src="../js/jquery-1.9.1.min.js"></script>
+        <script src="../js/jquery.mobile-1.4.5.min.js"></script>
     </head>
     <body>
     <div data-role="page" data-theme='a'>
@@ -28,7 +28,7 @@
             <h4>Brigada de vigilanca animal</h4>
             <ul data-role="listview">
 	            <li data-icon='false'><a href="#"><i class='lIcon fa fa-angle-right'></i>¿Qué es?</a></li>
-	            <li data-icon='false'><a href="denuncia.php"><i class='lIcon fa fa-angle-right'></i>Denuncia</a></li>
+	            <li data-icon='false'><a href="denuncia.html"><i class='lIcon fa fa-angle-right'></i>Denuncia</a></li>
             </ul>
         </div>
 	<div data-role="collapsible" data-content-theme="b">
@@ -36,13 +36,13 @@
             <ul data-role="listview">
 	            <li data-icon='false'><a href="../grafiti/ques.html"><i class='lIcon fa fa-angle-right'></i>¿Qué es?</a></li>
 	            <li data-icon='false'><a href="../grafiti/donde.html"><i class='lIcon fa fa-angle-right'></i>¿Donde puedo verlos?</a></li>
-	            <li data-icon='false'><a href="../grafiti/ins.php"><i class='lIcon fa fa-angle-right'></i>Inscribete</a></li>
-	            <li data-icon='false'><a href="../grafiti/denuncia.php"><i class='lIcon fa fa-angle-right'></i>Denuncia</a></li>
+	            <li data-icon='false'><a href="../grafiti/ins.html"><i class='lIcon fa fa-angle-right'></i>Inscribete</a></li>
+	            <li data-icon='false'><a href="../grafiti/denuncia.html"><i class='lIcon fa fa-angle-right'></i>Denuncia</a></li>
             </ul>
         </div>
 <ul data-role="listview">
-            <li data-icon='false'><a href="../alc/"><i class='lIcon fa fa-bullhorn'></i>Conduce sin alcohol</a></li>
-            <li data-icon='false'><a href="../sol/"><i class='lIcon fa fa-bullhorn'></i>Solicitud de platicas</a></li>
+            <li data-icon='false'><a href="../alc/index.html"><i class='lIcon fa fa-bullhorn'></i>Conduce sin alcohol</a></li>
+            <li data-icon='false'><a href="../sol/index.html"><i class='lIcon fa fa-bullhorn'></i>Solicitud de platicas</a></li>
         </ul>
     </div>
 
@@ -72,7 +72,7 @@
         <div data-role='header' data-theme='b'>
           <h1>Ingrese su numero de folio</h1>
          </div>
-       <form action="seguimiento.php" method="post">
+       <form action="seguimiento.html" method="post">
          <div data-role='content' data-theme='a'>
           <label for="folio">Folio:</label>
           <input type="text" name="folio" id="folio" value="" data-clear-btn="true">
@@ -89,7 +89,7 @@
 			<div data-role="navbar">
 				<ul>
 					<li><a href="#"><i class='blIcon fa fa-home'></i>¿Que es?</a></li>
-					<li><a href="denuncia.php"><i class='blIcon fa fa-bullhorn'></i>Denuncia</a></li>
+					<li><a href="denuncia.html"><i class='blIcon fa fa-bullhorn'></i>Denuncia</a></li>
 					<li><a href="#seguimientoDenuncia" data-rel='popup' data-position-to='window' data-role='button' data-transition='pop' data-inline='true'><i class='blIcon fa fa-question'></i>Estatus denuncia</a></li>
 				</ul>
 			</div>
