--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h4>Brigada de vigilanca animal</h4>
             <ul data-role="listview">
 	            <li data-icon='false'><a href="brigada/ques.html"><i class='lIcon fa fa-angle-right'></i>¿Qué es?</a></li>
-	            <li data-icon='false'><a href="brigada/denuncia.php"><i class='lIcon fa fa-angle-right'></i>Denuncia</a></li>
+	            <li data-icon='false'><a href="brigada/denuncia.html"><i class='lIcon fa fa-angle-right'></i>Denuncia</a></li>
             </ul>
         </div>
 	    <div data-role="collapsible" data-content-theme="b">
@@ -33,20 +33,23 @@
             <ul data-role="listview">
 	            <li data-icon='false'><a href="grafiti/ques.html"><i class='lIcon fa fa-angle-right'></i>¿Qué es?</a></li>
 	            <li data-icon='false'><a href="grafiti/donde.html"><i class='lIcon fa fa-angle-right'></i>¿Donde puedo verlos?</a></li>
-	            <li data-icon='false'><a href="grafiti/ins.php"><i class='lIcon fa fa-angle-right'></i>Inscribete</a></li>
-	            <li data-icon='false'><a href="grafiti/denuncia.php"><i class='lIcon fa fa-angle-right'></i>Denuncia</a></li>
+	            <li data-icon='false'><a href="grafiti/ins.html"><i class='lIcon fa fa-angle-right'></i>Inscribete</a></li>
+	            <li data-icon='false'><a href="grafiti/denuncia.html"><i class='lIcon fa fa-angle-right'></i>Denuncia</a></li>
             </ul>
         </div>
         <ul data-role="listview">
-            <li data-icon='false'><a href="alc/"><i class='lIcon fa fa-bullhorn'></i>Conduce sin alcohol</a></li>
-            <li data-icon='false'><a href="sol/"><i class='lIcon fa fa-bullhorn'></i>Solicitud de platicas</a></li>
+            <li data-icon='false'><a href="alc/index.html"><i class='lIcon fa fa-bullhorn'></i>Conduce sin alcohol</a></li>
+            <li data-icon='false'><a href="sol/index.html"><i class='lIcon fa fa-bullhorn'></i>Solicitud de platicas</a></li>
         </ul>
     </div>
 
 <!-- End Menu -->
      <div data-role="content">   
 	        <div class='inset'>
+            <br><br>
             	<center><img src="img/logocdmx.png"/></center>
+                            <br><br>
+
             </div>
         	<ul data-nativedroid-plugin='cards'>
             
