--- a/grafiti/donde.html
+++ b/grafiti/donde.html
@@ -4,13 +4,13 @@
 <meta charset="UTF-8">
         <title>Amigo Prevención del delito</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-		<link rel="stylesheet" href="../css/font-awesome.min.css" />
-		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+			<link rel="stylesheet" href="../css/font-awesome.min.css" />
+		<link rel="stylesheet" href="../css/jquery.mobile-1.4.5.min.css" />
         <link rel="stylesheet" href="../css/jquerymobile.nativedroid.css" />
         <link rel="stylesheet" href="../css/jquerymobile.nativedroid.dark.css"  id='jQMnDTheme' />
         <link rel="stylesheet" href="../css/jquerymobile.nativedroid.color.green.css" id='jQMnDColor' />
-		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-        <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+		<script src="../js/jquery-1.9.1.min.js"></script>
+        <script src="../js/jquery.mobile-1.4.5.min.js"></script>
 
     </head>
     <body>
@@ -31,8 +31,8 @@
        <div data-role="collapsible" data-content-theme="b">
             <h4>Brigada de vigilanca animal</h4>
             <ul data-role="listview">
-	            <li data-icon='false'><a href="#"><i class='lIcon fa fa-angle-right'></i>¿Qué es?</a></li>
-	            <li data-icon='false'><a href="denuncia.php"><i class='lIcon fa fa-angle-right'></i>Denuncia</a></li>
+	            <li data-icon='false'><a href="../brigada/ques.html"><i class='lIcon fa fa-angle-right'></i>¿Qué es?</a></li>
+	            <li data-icon='false'><a href="../brigada/denuncia.html"><i class='lIcon fa fa-angle-right'></i>Denuncia</a></li>
             </ul>
         </div>
 	<div data-role="collapsible" data-content-theme="b">
@@ -40,13 +40,13 @@
             <ul data-role="listview">
 	            <li data-icon='false'><a href="ques.html"><i class='lIcon fa fa-angle-right'></i>¿Qué es?</a></li>
 	            <li data-icon='false'><a href="#"><i class='lIcon fa fa-angle-right'></i>¿Donde puedo verlos?</a></li>
-	            <li data-icon='false'><a href="ins.php"><i class='lIcon fa fa-angle-right'></i>Inscribete</a></li>
-	            <li data-icon='false'><a href="denuncia.php"><i class='lIcon fa fa-angle-right'></i>Denuncia</a></li>
+	            <li data-icon='false'><a href="ins.html"><i class='lIcon fa fa-angle-right'></i>Inscribete</a></li>
+	            <li data-icon='false'><a href="denuncia.html"><i class='lIcon fa fa-angle-right'></i>Denuncia</a></li>
             </ul>
         </div>
 <ul data-role="listview">
-            <li data-icon='false'><a href="../alc/"><i class='lIcon fa fa-bullhorn'></i>Conduce sin alcohol</a></li>
-            <li data-icon='false'><a href="../sol/"><i class='lIcon fa fa-bullhorn'></i>Solicitud de platicas</a></li>
+            <li data-icon='false'><a href="../alc/index.html"><i class='lIcon fa fa-bullhorn'></i>Conduce sin alcohol</a></li>
+            <li data-icon='false'><a href="../sol/index.html"><i class='lIcon fa fa-bullhorn'></i>Solicitud de platicas</a></li>
         </ul>
     </div>
 
@@ -93,10 +93,33 @@
             </table>
  			</div>
 				        
-        </div>
 
     </div>
-        <script src="../js/nativedroid.script.js"></script>
+        <div data-role='popup' id='seguimientoDenuncia' data-theme='a'>
+        <div data-role='header' data-theme='b'>
+          <h1>Ingrese su numero de folio</h1>
+         </div>
+       <form action="seguimiento.html" method="post">
+         <div data-role='content' data-theme='a'>
+          <label for="folio">Folio:</label>
+          <input type="text" name="folio" id="folio" value="" data-clear-btn="true">
+          <div class='showastabs center nobg'>
+			<button type="submit" data-inline='true'><i class='lIcon fa fa-check'></i>Consultar</button>
+           	<a href="dialog/index.html" data-rel="back" data-role="button" data-inline="true"><i class='lIcon fa fa-times'></i>Cerrar</a>
 
+            </div>
+          </div>
+                </form>
+    </div>
+    <script src="../js/nativedroid.script.js"></script>
+	<div data-position="fixed" data-tap-toggle="false" data-role="footer" data-tap-toggle="false" data-theme='b'>
+			<div data-role="navbar">
+			<ul>
+					<li><a href="ques.html"><i class='blIcon fa fa-home'></i>¿Que es?</a></li>
+					<li><a href="#"><i class='blIcon fa fa-bullhorn'></i>Denuncia</a></li>
+					<li><a href="#seguimientoDenuncia" data-rel='popup' data-position-to='window' data-role='button' data-transition='pop' data-inline='true'><i class='blIcon fa fa-question'></i>Estatus denuncia</a></li>
+				</ul>
+			</div>
+		</div>
     </body>
 </html>
