--- a/alc/seguimiento.html
+++ b/alc/seguimiento.html
@@ -15,7 +15,7 @@
     <body>
     <div data-role="page" data-theme='a'>
         <div data-role="header" data-position="fixed" data-tap-toggle="false" data-theme='b'>
-            <h1>Grafiti</h1>
+            <h1>Amigo Prevención del delito</h1>
 	            <a href="#menu" data-role='button' data-inline='false'><i class='lIcon fa fa-bars'></i></a>
         </div>
                 
@@ -24,8 +24,8 @@
        <ul data-role="listview">
             <li data-icon='false'><a href="../index.html"><i class='lIcon fa fa-home'></i>Inicio</a></li>
         </ul>
-	    <div data-role="collapsible" data-content-theme="b">
-            <h4>Amigo Prevención del delito</h4>
+       <div data-role="collapsible" data-content-theme="b">
+            <h4>Brigada de vigilanca animal</h4>
             <ul data-role="listview">
 	            <li data-icon='false'><a href="../brigada/ques.html"><i class='lIcon fa fa-angle-right'></i>¿Qué es?</a></li>
 	            <li data-icon='false'><a href="../brigada/denuncia.html"><i class='lIcon fa fa-angle-right'></i>Denuncia</a></li>
@@ -34,21 +34,20 @@
 	<div data-role="collapsible" data-content-theme="b">
             <h4>Grafiti</h4>
             <ul data-role="listview">
-	            <li data-icon='false'><a href="ques.html"><i class='lIcon fa fa-angle-right'></i>¿Qué es?</a></li>
-	            <li data-icon='false'><a href="donde.html"><i class='lIcon fa fa-angle-right'></i>¿Donde puedo verlos?</a></li>
-	            <li data-icon='false'><a href="ins.php"><i class='lIcon fa fa-angle-right'></i>Inscribete</a></li>
-	            <li data-icon='false'><a href="denuncia.php"><i class='lIcon fa fa-angle-right'></i>Denuncia</a></li>
+	            <li data-icon='false'><a href="#"><i class='lIcon fa fa-angle-right'></i>¿Qué es?</a></li>
+	            <li data-icon='false'><a href="../grafiti/donde.html"><i class='lIcon fa fa-angle-right'></i>¿Donde puedo verlos?</a></li>
+	            <li data-icon='false'><a href="../grafiti/ins.html"><i class='lIcon fa fa-angle-right'></i>Inscribete</a></li>
+	            <li data-icon='false'><a href="../grafiti/denuncia.html"><i class='lIcon fa fa-angle-right'></i>Denuncia</a></li>
             </ul>
         </div>
-<ul data-role="listview">
-            <li data-icon='false'><a href="../alc/index.html"><i class='lIcon fa fa-bullhorn'></i>Conduce sin alcohol</a></li>
+        <ul data-role="listview">
+            <li data-icon='false'><a href="#"><i class='lIcon fa fa-bullhorn'></i>Conduce sin alcohol</a></li>
             <li data-icon='false'><a href="../sol/index.html"><i class='lIcon fa fa-bullhorn'></i>Solicitud de platicas</a></li>
         </ul>
         <ul data-role="listview">
-            <li data-icon='false'><a href="#"></i>Estatus Denuncia</a>				            </li>
-        </ul>
-        
-            </div>
+            <li data-icon='false'><a href="#seguimientoDenuncia" data-rel='popup' data-position-to='window' data-role='button' data-transition='pop' data-inline='true'><i class='lIcon fa fa-info'></i>Estatus Denuncia</a>				            </li>
+        </ul> 
+   </div>
 
 <!-- End Menu -->
      <div data-role="content">   
