--- a/brigada/seguimiento.html
+++ b/brigada/seguimiento.html
@@ -15,7 +15,7 @@
     <body>
     <div data-role="page" data-theme='a'>
         <div data-role="header" data-position="fixed" data-tap-toggle="false" data-theme='b'>
-            <h1>Brigada de vigilancia animal</h1>
+            <h1>Amigo Prevención del delito</h1>
 	            <a href="#menu" data-role='button' data-inline='false'><i class='lIcon fa fa-bars'></i></a>
         </div>
                 
@@ -44,7 +44,10 @@
             <li data-icon='false'><a href="../alc/index.html"><i class='lIcon fa fa-bullhorn'></i>Conduce sin alcohol</a></li>
             <li data-icon='false'><a href="../sol/index.html"><i class='lIcon fa fa-bullhorn'></i>Solicitud de platicas</a></li>
         </ul>
-    </div>
+        <ul data-role="listview">
+            <li data-icon='false'><a href="#"><i class='lIcon fa fa-info'></i>Estatus Denuncia</a>				            </li>
+        </ul>
+   </div>
 
 <!-- End Menu -->
      <div data-role="content">   
@@ -62,14 +65,5 @@
     </div>
 
     <script src="../js/nativedroid.script.js"></script>
-	<div data-position="fixed" data-tap-toggle="false" data-role="footer" data-tap-toggle="false" data-theme='b'>
-			<div data-role="navbar">
-				<ul>
-					<li><a href="ques.html"><i class='blIcon fa fa-home'></i>¿Que es?</a></li>
-					<li><a href="denuncia.html"><i class='blIcon fa fa-bullhorn'></i>Denuncia</a></li>
-					<li><a href="#" data-rel='popup' data-position-to='window' data-role='button' data-transition='pop' data-inline='true'><i class='blIcon fa fa-question'></i>Estatus denuncia</a></li>
-				</ul>
-			</div>
-		</div>
     </body>
 </html>
