--- a/grafiti/donde.html
+++ b/grafiti/donde.html
@@ -48,7 +48,10 @@
             <li data-icon='false'><a href="../alc/index.html"><i class='lIcon fa fa-bullhorn'></i>Conduce sin alcohol</a></li>
             <li data-icon='false'><a href="../sol/index.html"><i class='lIcon fa fa-bullhorn'></i>Solicitud de platicas</a></li>
         </ul>
-    </div>
+        <ul data-role="listview">
+            <li data-icon='false'><a href="#seguimientoDenuncia" data-rel='popup' data-position-to='window' data-role='button' data-transition='pop' data-inline='true'><i class='lIcon fa fa-info'></i>Estatus Denuncia</a>				            </li>
+        </ul>
+            </div>
 
 <!-- End Menu -->
         <div data-role="content">  
@@ -112,14 +115,5 @@
                 </form>
     </div>
     <script src="../js/nativedroid.script.js"></script>
-	<div data-position="fixed" data-tap-toggle="false" data-role="footer" data-tap-toggle="false" data-theme='b'>
-			<div data-role="navbar">
-			<ul>
-					<li><a href="ques.html"><i class='blIcon fa fa-home'></i>¿Que es?</a></li>
-					<li><a href="#"><i class='blIcon fa fa-bullhorn'></i>Denuncia</a></li>
-					<li><a href="#seguimientoDenuncia" data-rel='popup' data-position-to='window' data-role='button' data-transition='pop' data-inline='true'><i class='blIcon fa fa-question'></i>Estatus denuncia</a></li>
-				</ul>
-			</div>
-		</div>
     </body>
 </html>
