--- a/grafiti/donde.html
+++ b/grafiti/donde.html
@@ -11,6 +11,8 @@
         <link rel="stylesheet" href="../css/jquerymobile.nativedroid.color.green.css" id='jQMnDColor' />
 		<script src="../js/jquery-1.9.1.min.js"></script>
         <script src="../js/jquery.mobile-1.4.5.min.js"></script>
+		<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+        <script src="../js/jquery.ui.map.js"></script>
 
     </head>
     <body>
@@ -62,7 +64,9 @@
 					<i class="fa fa-lightbulb-o"></i>
 					<p>Si quieres ser parte de esto, no olvides inscribirte</p>
 				</div>
-                
+                					<div id="map_canvas" style="height:350px;"></div>
+
+
                 <table data-role="table" id="table-column-toggle" data-mode="columntoggle" class="ui-responsive table-stroke">
               <thead>
                 <tr>
@@ -115,5 +119,19 @@
                 </form>
     </div>
     <script src="../js/nativedroid.script.js"></script>
+    
+    <script>
+	
+
+    $( document ).ready(function() {
+	var latLng = new google.maps.LatLng(19.4978,-99.1269);
+
+    $('#map_canvas').gmap().bind('init', function(ev, map) {
+$('#map_canvas').gmap('option', 'center', latLng);
+$('#map_canvas').gmap('option', 'zoom', 12);   
+	});
+
+});
+    </script>
     </body>
 </html>
