--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
         <title>Amigo Prevención del delito</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<link rel="stylesheet" href="css/font-awesome.min.css" />
-		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+		<link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css" />
         <link rel="stylesheet" href="css/jquerymobile.nativedroid.css" />
         <link rel="stylesheet" href="css/jquerymobile.nativedroid.dark.css"  id='jQMnDTheme' />
         <link rel="stylesheet" href="css/jquerymobile.nativedroid.color.green.css" id='jQMnDColor' />
-		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-        <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+		<script src="js/jquery-1.9.1.min.js"></script>
+        <script src="js/jquery.mobile-1.4.5.min.js"></script>
+        <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+        <script src="js/jquery.ui.map.js"></script>
     </head>
     <body>
     <div data-role="page" data-theme='a'>
@@ -102,6 +104,8 @@
     
 
     </div>
+                         					<div id="map_canvas" style="height:350px;"></div>
+
     <div data-role='popup' id='seguimientoDenuncia' data-theme='a'>
         <div data-role='header' data-theme='b'>
           <h1>Ingrese su numero de folio</h1>
@@ -119,6 +123,18 @@
                 </form>
     </div>    
     <script src="js/nativedroid.script.js"></script>
+    <script>
+	
 
+    $( document ).ready(function() {
+	var latLng = new google.maps.LatLng(19.4978,-99.1269);
+
+    $('#map_canvas').gmap().bind('init', function(ev, map) {
+$('#map_canvas').gmap('option', 'center', latLng);
+$('#map_canvas').gmap('option', 'zoom', 12);   
+	});
+
+});
+    </script>
     </body>
 </html>
