--- a/brigada/seguimiento.html
+++ b/brigada/seguimiento.html
@@ -32,7 +32,7 @@
             </ul>
         </div>
 	<div data-role="collapsible" data-content-theme="b">
-            <h4>Grafiti</h4>
+            <h4>Unidad Grafiti</h4>
             <ul data-role="listview">
 	            <li data-icon='false'><a href="../grafiti/ques.html"><i class='lIcon fa fa-angle-right'></i>¿Qué es?</a></li>
 	            <li data-icon='false'><a href="../grafiti/donde.html"><i class='lIcon fa fa-angle-right'></i>¿Donde puedo verlos?</a></li>
