--- a/grafiti/seguimiento.html
+++ b/grafiti/seguimiento.html
@@ -15,7 +15,7 @@
     <body>
     <div data-role="page" data-theme='a'>
         <div data-role="header" data-position="fixed" data-tap-toggle="false" data-theme='b'>
-            <h1>Grafiti</h1>
+            <h1>Amigo prevención del delito</h1>
 	            <a href="#menu" data-role='button' data-inline='false'><i class='lIcon fa fa-bars'></i></a>
         </div>
                 
@@ -25,14 +25,14 @@
             <li data-icon='false'><a href="../index.html"><i class='lIcon fa fa-home'></i>Inicio</a></li>
         </ul>
 	    <div data-role="collapsible" data-content-theme="b">
-            <h4>Amigo Prevención del delito</h4>
+            <h4>Brigada de vigilanca animal</h4>
             <ul data-role="listview">
 	            <li data-icon='false'><a href="../brigada/ques.html"><i class='lIcon fa fa-angle-right'></i>¿Qué es?</a></li>
 	            <li data-icon='false'><a href="../brigada/denuncia.html"><i class='lIcon fa fa-angle-right'></i>Denuncia</a></li>
             </ul>
         </div>
 	<div data-role="collapsible" data-content-theme="b">
-            <h4>Grafiti</h4>
+            <h4>Unidad Grafiti</h4>
             <ul data-role="listview">
 	            <li data-icon='false'><a href="ques.html"><i class='lIcon fa fa-angle-right'></i>¿Qué es?</a></li>
 	            <li data-icon='false'><a href="donde.html"><i class='lIcon fa fa-angle-right'></i>¿Donde puedo verlos?</a></li>
